[package]
name = "Escrow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayref = "0.3.7"
solana-program = "1.17.13"
spl-token = {version="4.0.0", features=["no-entrypoint"]}
thiserror = "1.0.52"

[lib]
crate-type = ["cdylib", "lib"]
